--- a/public/src/index.ejs
+++ b/public/src/index.ejs
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>Theme Manager</title>
+    <link rel="stylesheet" href="https://cdn.bootcss.com/antd/3.15.0/antd.min.css">
     <link href="<%= htmlWebpackPlugin.options.libs['spinkit'] %>" rel="stylesheet" media="screen" />
   </head>
   <body>
